[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Truong Thanh Tung"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.38"
geoalchemy2 = "^0.17.1"
scrapy = "^2.12.0"
psycopg2-binary = "^2.9.10"
scrapyd-client = "^2.0.1"
scrapy-rotating-proxies = "^0.6.2"
scrapy-user-agents = "^0.1.1"
shapely = "^2.0.7"
humanize = "^4.12.0"
pytz = "^2025.1"
rich = "^13.9.4"
python-telegram-bot = "^21.10"
alembic = "^1.14.1"
pymbutil = "^0.1.0"
setuptools = "^65.5.0"
scrapy-redis = "^0.9.1"
scrapy-playwright = "^0.0.43"
scrapyd = {git = "https://github.com/scrapy/scrapyd.git", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
